[package]
name = "api_rust_graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
async-graphql = "7.0.2"
async-graphql-actix-web = "7.0.2"
mongodb = "2.8.2"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
log = "0.4.21"
env_logger = "0.11.3"
async-trait = "0.1.80"

[dev-dependencies]
actix-rt = "2"
serde_json = "1.0"
mockall = "0.12.1"
